Fix products header spacing

--- a/src/scss/pages/_products.scss
+++ b/src/scss/pages/_products.scss
@@ -5,7 +5,7 @@
   grid-template-columns: 100%;
   grid-template-rows: 410px;
   align-items: center;
-  margin: 0 auto;
+  margin: 7rem auto;
 }
 
 .products-header__image-wrapper {
